--- a/index.html
+++ b/index.html
@@ -4,62 +4,72 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css" rel="stylesheet" >
 </head>
-
-<div class="outer">
+<body>
+ <div class="outer">
   <header>
-  <div id="header">
-    <div> 
-      <img src="shubh.jpg.jpg" id="image">
-      </div>
-      <div>
-        <h1 id="name" > Shubhranshu Yadav</h1>
-        <p id ="underline"></p>
-      </div>
-      </div>
-      </header>
-     <section>
-     <div class=" skills" >
-  <h1>My skills</h1>
-  <li> 
-
-   <h3>html5</h3><span class="bar"><span class="A"></span></span>
-  </li>
-  <li>
-  <h3>CSS</h3><span class="bar"><span class="B"></span></span>
-  </li>
-<li> 
-  <h3>C Programming</h3><span class="bar"><span class="C"></span></span>
-</li>
-
-<li> <h3>JAVA</h3><span class="bar"><span class="D"></span></span> 
-</li>
-<li> <h3>DBMS</h3><span class="bar"><span class="E"></span></span> 
-</li>
-</div>
-<div class= "PERSONAL SKILLS" id="z">
-  <h1> PERSONAL SKILLS</h1>
-  <ol id="Z">
-   <li>Quick learner</li>
-<li>Smart worker</li>
-<li>Oppurtunity Grabber</li>
-<li>Good Communication Skills</li>
-<li>Always ready to Grab new task</li>
-<li>Goal Oriented</li></p>
-</div>
-<div class="hobbies" id="k">
-  <h2>Personal Information</h2>
-<p  id="t">  Nationality      : Indian<br>
-Gender                       :      Male<br>
-Father's Name                : Mr Rajveer Singh Yadav<br>
-Date of birth                :   23-07-1998<br>
-Language known               :  English,Hindi<br> </p>
-   </section>
-    <aside class="right">
-      <h1 id="obj" > Carrer Objective</h1>
-      <p id="ojb"> To suceed in an environment of growth and excellence and earn a job which provides me job satisfaction and self-development and help me achieve personal as well as organisational goals</p><br>
-      <h2 id=ad>Academic Details</h2>
+    <div id="header">
+      <div> 
+        <img src="shubh.jpg.jpg" id="image">
+        </div>
+        <div>
+          <h1 id="name" > Shubhranshu Yadav</h1>
+          <p id ="underline"></p>
+        </div>
+        </div>
+        </header>
+  </header>
+<section>
+  <div class="skills">
+    <h1> MY SKILLS</h1>
+     <li>
+     <h3> HTML5</h3><span class="bar"><span class="html"></span></span>
+    </li>
+     <li>
+    <h3> CSS</h3><span class="bar"><span class="css"></span></span>
+    </li> 
+     <li>
+    <h3> JAVA</h3><span class="bar"><span class="java"></span></span>
+    </li> 
+     <li>
+     <h3> DBMS</h3><span class="bar"><span class="dbms"></span></span>
+    </li> 
+ </div>
+ <div class="wrapper">
+  <h1 id=counts> SOCIAL ACCOUNTS </h1>
+  <div class="media">
+    <ul>
+      <li><a href="https://github.com/shubhranshu23-07"><i class="fa fa-github" aria-hidden="true" ></i></li></a>
+      <li><a href="https://www.instagram.com/anirudhyadav23/"><i class="fa fa-instagram" aria-hidden="true"></i></li></a>
+      <li><a href="https://www.linkedin.com/in/shubhranshu-yadav-763abb173/"><i class="fa fa-linkedin" aria-hidden="true"></i></li></a>
+      <li><a href="https://twitter.com/shubhranshu987"><i class="fa fa-twitter" aria-hidden="true"></i></li></a>
+      <li><a href="https://www.hackerrank.com/shubhranshuyadav"><i class="fa fa-hackerrank"  aria-hidden="true"></i></li></ul></a>
+      </ul> 
+    </div>
+  </div>
+  <div class="profile">
+    <h2> PERSONAL INFORMATION</h2>
+    </div>
+    <div class="details">
+  <p> <pre>
+Father’s Name      : Mr Rajveer Singh Yadav
+Date of Birth      : 23 july 1998
+Marital Status     :   Unmarried
+Nationality        :    Indian
+Religion           :    Hindu
+Languages Known    : English & Hindi
+Permanent Address  :  D-375 Pratap Vihar 
+                     Sector-11 Uttar-Pradesh
+                     Ghaziabad 201009 </pre> </p>
+                     </div>
+</section>
+   <aside class="right">
+    <h1 id="obj" > Carrer Objective </h1>
+    <p id="ojb"> To suceed in an environment of growth and excellence and earn a job which provides me job satisfaction and self-development and help me achieve personal as well as organisational goals.</p><br>
+    <h2 id=ad>Academic Details</h2>
       <table>
         <style>
           table, th, td {
@@ -67,14 +77,15 @@ Language known               :  English,Hindi<br> </p>
           border-collapse:collapse;
           }
           th, td {
-            padding: 10px;
+            padding: 30px;
           }
           th,td {
             text-align: center;
+            width: 340px;
+            font-size: 25px;
           }
           </style>
-          
-      <tr>
+       <tr>
         <th>Course</th>
         <th> University/board</th>
         <th>College name/ school name </th>
@@ -103,25 +114,63 @@ Language known               :  English,Hindi<br> </p>
         <td>66%</td>
         </tr>
         </table><br>
-      <h2 id= "dels">PROJECT DETAILS</h2>
-     <p  id="seld"> <b>Project Title </b>: Online banking System<br>
+        <h2 id= "dels"> PROJECT DETAILS</h2>
+     <p  id="seld"> <b >Project Title </b>: Online banking System<br>
 <b>Technology Used</b>: HTML,CSS, java Programming language.<br>
 <b>Database:</b> Mysql<br> 
-<b>Responsibility</b> Designing and planning<br> </p>
-<p id="nts" ><b> Keynotes about project</b></p>
-<ol id="lo">
-<li>Balance Enquiry</li>
-<li>Money Transfer</li>
-<li>Login Module</li>
-<li>New Customer Data</li>
-<li>Loan Module</li>
-<li>Account History</li>
-<li>Admin Module</li>
-<li>Security</li>
-<li>Message Alert</li>
-<li>User-friendly </li>
-</ol>
-</aside>
+<b>Responsibility</b> Designing and planning<br> 
+ <p id="commu"> Key Notes About Project </p>
+<ul id="lo">
+  <li> # Balance Enquiry</li>
+  <li> # Money Transfer</li>
+  <li> # Login Module</li>
+  <li> # New Customer Data</li>
+  <li> # Loan Module</li>
+  <li> # Account History</li>
+  <li> # Admin Module</li>
+  <li> # Security</li>
+  <li> # Message Alert</li>
+  <li> # User-friendly </li>
+</ul>
+<div class= "traits">
+ <h2> PERSONALITY TRAITS</h2>
 </div>
- </body>
+ <div class="communication">
+   <ul>
+<li># Good Communication Skills </li>
+<li># Keen Observer</li>
+<li># Loyal toward Work and Duties</li>
+<li># I give 100% to any task to complete leadership</li>
+<li># Ability to Work in Group as well as in team</li>
+<li>#  Quick learner</li>
+</ul>
+
+</div>
+ </pre></p>
+</div>
+   <footer>
+     <h1 id="hobby"> HOBBIES </h1>
+     <ul class="list-inline dev-icons">
+      <li class="list-inline-item"><i class="fa fa-music"></i></i></li>
+  <li class="list-inline-item"><i class="fa fa-book"></i></li>
+     <li class="list-inline-item"><i class="fa fa-globe" aria-hidden="true"></i></li>
+     <li class="list-inline-item"><i class="fa fa-motorcycle"></i></li>
+     <li class="list-inline-item"><i class="fa fa-tree"></i></li>
+    </ul>
+
+
+     </ol>
+    <h1 id="dec">Declaration</h1>
+    <p id="ced"> I do hereby declare that above given information is true to the best of my knowledge and belief.
+    </p>
+    <div class="checkbox">  </div>
+   </footer>
+
+  
+</body>
+</html>
+  
+
+  
+</body>
 </html>
