--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style.css" rel="stylesheet" >
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <!----------------------fontawesome js link-------------------->
+   <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+
+  <!------------------fontawesome vdn link online-------------------->
+   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+   
+ <!------------------css styesheet ---------------------->
+   <link rel="stylesheet" type="text/css" href="style.css">
+   
 </head>
 <body>
  <div class="outer">
@@ -77,11 +85,11 @@ Permanent Address  :  D-375 Pratap Vihar
           border-collapse:collapse;
           }
           th, td {
-            padding: 30px;
+            padding: 25px;
           }
           th,td {
             text-align: center;
-            width: 340px;
+            width: 300px;
             font-size: 25px;
           }
           </style>
