--- a/index.html
+++ b/index.html
@@ -1,184 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+ 
+    <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
 
-  <!----------------------fontawesome js link-------------------->
-   <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+   <!------------------fontawesome vdn link online-------------------->
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <!------------------fontawesome vdn link online-------------------->
-   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-   
- <!------------------css styesheet ---------------------->
-   <link rel="stylesheet" type="text/css" href="style.css">
-   
+  <link rel="stylesheet" href="style.css" rel="stylesheet">
 </head>
-<body>
- <div class="outer">
-  <header>
-    <div id="header">
-      <div> 
-        <img src="shubh.jpg.jpg" id="image">
-        </div>
-        <div>
-          <h1 id="name" > Shubhranshu Yadav</h1>
-          <p id ="underline"></p>
-        </div>
-        </div>
-        </header>
-  </header>
+<header>
+  <div class="image">
+    <img src="shubh.jpg.jpg" alt="picture" id="I">
+    <h2 ID="name"> SHUBHRANSHU YADAV</h2>
+  </div>
+  <div class="PI">
+    <ul id="KD">
+      <li>Father’s Name : Mr Rajveer Singh Yadav</li>
+      <li> Date of Birth : 23 july 1998</li>
+      <li> Marital Status : Unmarried</li>
+      <li>Nationality : Indian</li>
+      <li> Religion : Hindu</li>
+      <li>Languages Known : English & Hindi</li>
+      <li> Permanent Address : D-375 Pratap Vihar
+        Sector-11 Uttar-Pradesh
+        Ghaziabad 201009</li>
+    </ul>
+    </p>
+  </div>
+</header>
 <section>
   <div class="skills">
     <h1> MY SKILLS</h1>
-     <li>
-     <h3> HTML5</h3><span class="bar"><span class="html"></span></span>
-    </li>
-     <li>
-    <h3> CSS</h3><span class="bar"><span class="css"></span></span>
-    </li> 
-     <li>
-    <h3> JAVA</h3><span class="bar"><span class="java"></span></span>
-    </li> 
-     <li>
-     <h3> DBMS</h3><span class="bar"><span class="dbms"></span></span>
-    </li> 
- </div>
- <div class="wrapper">
-  <h1 id=counts> SOCIAL ACCOUNTS </h1>
-  <div class="media">
-    <ul>
-      <li><a href="https://github.com/shubhranshu23-07"><i class="fa fa-github" aria-hidden="true" ></i></li></a>
-      <li><a href="https://www.instagram.com/anirudhyadav23/"><i class="fa fa-instagram" aria-hidden="true"></i></li></a>
-      <li><a href="https://www.linkedin.com/in/shubhranshu-yadav-763abb173/"><i class="fa fa-linkedin" aria-hidden="true"></i></li></a>
-      <li><a href="https://twitter.com/shubhranshu987"><i class="fa fa-twitter" aria-hidden="true"></i></li></a>
-      <li><a href="https://www.hackerrank.com/shubhranshuyadav"><i class="fa fa-hackerrank"  aria-hidden="true"></i></li></ul></a>
-      </ul> 
+    <div class="list">
+      <li>
+        <h3> HTML5</h3><span class="bar"><span class="html"></span></span>
+      </li>
+      <li>
+        <h3> CSS</h3><span class="bar"><span class="css"></span></span>
+      </li>
+      <li>
+        <h3> JAVA</h3><span class="bar"><span class="java"></span></span>
+      </li>
+      <li>
+        <h3> DBMS</h3><span class="bar"><span class="dbms"></span></span>
+      </li>
     </div>
   </div>
-  <div class="profile">
-    <h2> PERSONAL INFORMATION</h2>
-    </div>
-    <div class="details">
-  <p> <pre>
-Father’s Name      : Mr Rajveer Singh Yadav
-Date of Birth      : 23 july 1998
-Marital Status     :   Unmarried
-Nationality        :    Indian
-Religion           :    Hindu
-Languages Known    : English & Hindi
-Permanent Address  :  D-375 Pratap Vihar 
-                     Sector-11 Uttar-Pradesh
-                     Ghaziabad 201009 </pre> </p>
-                     </div>
-</section>
-   <aside class="right">
-    <h1 id="obj" > Carrer Objective </h1>
-    <p id="ojb"> To suceed in an environment of growth and excellence and earn a job which provides me job satisfaction and self-development and help me achieve personal as well as organisational goals.</p><br>
-    <h2 id=ad>Academic Details</h2>
-      <table>
-        <style>
-          table, th, td {
-            border: 1px solid black;
-          border-collapse:collapse;
-          }
-          th, td {
-            padding: 25px;
-          }
-          th,td {
-            text-align: center;
-            width: 300px;
-            font-size: 25px;
-          }
-          </style>
-       <tr>
-        <th>Course</th>
-        <th> University/board</th>
-        <th>College name/ school name </th>
-        <th>Year of passing</th>
-        <th> Percentage</th>
-        </tr>
-        <tr>
-        <td>Bachleor of Computer Application</td>
-        <td>Chaudhary Charan Singh Univesity</td>
-        <td>Sunderdeep group of istituions</td>
-        <td>2019</td>
-        <td>60%</td>
-        </tr> 
-        <tr>
-        <td>12<sup>th</sup></td>
-        <td>Central Board of Secondary Education</td>
-        <td>Children's Academy School</td>
-        <td>2016</td>
-        <td>60%</td>
-        </tr>
-        <tr>
-        <td>10<sup>th</sup></td>
-        <td>Central Board of Secondary Education</td>
-        <td>Children's Academy School</td>
-        <td>2014</td>
-        <td>66%</td>
-        </tr>
-        </table><br>
-        <h2 id= "dels"> PROJECT DETAILS</h2>
-     <p  id="seld"> <b >Project Title </b>: Online banking System<br>
-<b>Technology Used</b>: HTML,CSS, java Programming language.<br>
-<b>Database:</b> Mysql<br> 
-<b>Responsibility</b> Designing and planning<br> 
- <p id="commu"> Key Notes About Project </p>
-<ul id="lo">
-  <li> # Balance Enquiry</li>
-  <li> # Money Transfer</li>
-  <li> # Login Module</li>
-  <li> # New Customer Data</li>
-  <li> # Loan Module</li>
-  <li> # Account History</li>
-  <li> # Admin Module</li>
-  <li> # Security</li>
-  <li> # Message Alert</li>
-  <li> # User-friendly </li>
-</ul>
-<div class= "traits">
- <h2> PERSONALITY TRAITS</h2>
-</div>
- <div class="communication">
-   <ul>
-<li># Good Communication Skills </li>
-<li># Keen Observer</li>
-<li># Loyal toward Work and Duties</li>
-<li># I give 100% to any task to complete leadership</li>
-<li># Ability to Work in Group as well as in team</li>
-<li>#  Quick learner</li>
-</ul>
-
-</div>
- </pre></p>
-</div>
-   <footer>
-     <h1 id="hobby"> HOBBIES </h1>
-     <ul class="list-inline dev-icons">
-      <li class="list-inline-item"><i class="fa fa-music"></i></i></li>
-  <li class="list-inline-item"><i class="fa fa-book"></i></li>
-     <li class="list-inline-item"><i class="fa fa-globe" aria-hidden="true"></i></li>
-     <li class="list-inline-item"><i class="fa fa-motorcycle"></i></li>
-     <li class="list-inline-item"><i class="fa fa-tree"></i></li>
+ <div class="O">
+   <h1 id="hobby"> HOBBIES </h1>
+    <ul class="list-inline dev-icons">
+      <li class="list-inline-item"><i class="fa fa-music"></i><br>Listening Music<br></li>
+      <li class="list-inline-item"><i class="fa fa-book"></i><br>Reading Novels<br></li>
+      <li class="list-inline-item"><i class="fa fa-globe" aria-hidden="true"></i><br>Travelling</li>
+      <li class="list-inline-item"><i class="fa fa-motorcycle"></i><br>bike Ridding </li>
+      <li class="list-inline-item"><i class="fa fa-tree"></i><br>Spent Time With Nature</li>
+      <li class="list-inline-item"><img class="fa fa-guitar"></i><br>Guitaring</li>
     </ul>
+ 
+  </div>
+</section>
+<aside class="right">
+  <h1 id="obj"> CAREER OBJECTIVE </h1>
+  <p id="ojb"> To suceed in an environment of growth and excellence and earn a job which provides me job satisfaction
+    and self-development and help me achieve personal as well as organisational goals.</p><br>
+  <h2 id=ad>ACADEMIC DETAILS</h2>
+  <table>
+    <tr>
+      <th>Course</th>
+      <th> University/board</th>
+      <th>College name/ school name </th>
+      <th>Year of passing</th>
+      <th> Percentage</th>
+    </tr>
+    <tr>
+      <td>Bachleor of Computer Application</td>
+      <td>Chaudhary Charan Singh Univesity</td>
+      <td>Sunderdeep group of istituions</td>
+      <td>2019</td>
+      <td>60%</td>
+    </tr>
+    <tr>
+      <td>12<sup>th</sup></td>
+      <td>Central Board of Secondary Education</td>
+      <td>Children's Academy School</td>
+      <td>2016</td>
+      <td>60%</td>
+    </tr>
+    <tr>
+      <td>10<sup>th</sup></td>
+      <td>Central Board of Secondary Education</td>
+      <td>Children's Academy School</td>
+      <td>2014</td>
+      <td>66%</td>
+    </tr>
+  </table>
+  <h2 id="dels"> PROJECT DETAILS</h2>
+  <p id="seld"> <b>Project Title </b>: Online banking System<br>
+    <b>Technology Used</b>: HTML,CSS, java Programming language.<br>
+    <b>Database:</b> Mysql<br>
+    <b>Responsibility</b> Designing and planning</p><br>
+  <p id="commu"> KEY NOTES ABOUT PROJECT </p>
+  <ul id="lo">
+    <li> # Balance Enquiry</li>
+    <li> # Money Transfer</li>
+    <li> # Login Module</li>
+    <li> # New Customer Data</li>
+    <li> # Loan Module</li>
+    <li> # Account History</li>
+    <li> # Admin Module</li>
+    <li> # Security</li>
+    <li> # Message Alert</li>
+    <li> # User-friendly </li>
+  </ul>
+  <div class="traits">
+    <h2> PERSONALITY TRAITS</h2>
+  </div>
+  <div class="communication">
+    <ul>
+      <li># Good Communication Skills </li>
+      <li># Keen Observer</li>
+      <li># Loyal toward Work and Duties</li>
+      <li># I give 100% to any task to complete leadership</li>
+      <li># Ability to Work in Group as well as in team</li>
+      <li># Quick learner</li>
+    </ul>
+    </div>
+    </aside>
+     <footer>
+     <div class="accounts">
+      <h1 id="A">SOCIAL ACCOUNTS </h1>
+      <ul id="B">
+        <li><a href="https://github.com/shubhranshu23-07"><i class="fab fa-github" aria-hidden="true"></i></li></a>
+        <li><a href="https://www.instagram.com/anirudhyadav23/"><i class="fab fa-instagram" aria-hidden="true"></i></li>
+        </a>
+        <li><a href="https://www.linkedin.com/in/shubhranshu-yadav-763abb173/"><i class="fab fa-linkedin"
+              aria-hidden="true"></i></li></a>
+        <li><a href="https://twitter.com/shubhranshu987"><i class="fab fa-twitter" aria-hidden="true"></i></li></a>
+        <li><a href=https://www.hackerrank.com/shubhranshuyada1><i class="fab fa-hackerrank" aria-hidden="true"></i></li></a>
+      </ul>
+    <h1 id="dec">DECLARATION</h1>
+    <p id="ced"> I do hereby declare that above given information is true to the best of my knowledge and belief.  </p>
+    <button onclick="window.print()">Print this page</button>
+    <a href="doc/Resume-shubh.pdf" target="new"> <button type="button" class="btn btn-outline-warning">Download Cv</button></a>
 
-
-     </ol>
-    <h1 id="dec">Declaration</h1>
-    <p id="ced"> I do hereby declare that above given information is true to the best of my knowledge and belief.
-    </p>
-    <div class="checkbox">  </div>
-   </footer>
-
-  
-</body>
+  </footer>
+ </body>
 </html>
-  
 
-  
-</body>
-</html>
+
+
